[project]
name = "disclosureinfo"
version = "0.1.0"
description = "KIND disclosure RSS collector and API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "tenacity>=8.2",
  "python-dateutil>=2.9",
  "structlog>=24.1",
]
